--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "rewrites": [
-    {"source": "/(.*)", "destination": "https://dev-lx8d.pantheonsite.io/$1"}
+    {"source": "/(.*)", "destination": "http://www.cfngd.top/$1"}
   ]
 }
