--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
   "rewrites": [
-    {"source": "/(.*)", "destination": "https://
-wordpress.lx8d.workers.dev/$1"}
+    {"source": "/(.*)", "destination": "http://s.vip.hk/$1"}
   ]
 }
