--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "rewrites": [
     {"source": "/(.*)", "destination": "https://
-wordpress.lx8d.workers.dev/$1"}
+wordpress.lx8d.eu.org/$1"}
   ]
 }
